--- a/pages/portfolioUploadWork/portfolioUploadWork.html
+++ b/pages/portfolioUploadWork/portfolioUploadWork.html
@@ -28,6 +28,12 @@
       type="text/css"
       href="vendor/bootstrap/css/bootstrap.min.css"
     />
+
+    <link
+    rel="stylesheet"
+    type="text/css"
+    href="../../dist/css/commonButton.css"
+  />
     <!-- <link rel=" stylesheet" type="text/css" href="sass/main.css" /> -->
     <!-- <link rel="stylesheet" href="dist/css/adminlte.min.css"> -->
     <link rel="stylesheet" href="../../scss/adminlte.css" />
@@ -282,6 +288,8 @@
                         <button
                           type="button"
                           class="btn btn-light choose-image-btn"
+                          data-toggle="modal" 
+                          data-target="#exampleModal"
                         >
                           Set Cover Image
                         </button>
@@ -407,6 +415,43 @@
           </div>
         </div>
       </div>
+
+
+      <!-- Cover Modal -->
+     <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Set Cover Image</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-md-6">
+            <label>Crop Image</label>
+            <div class="upload-frame " >
+              <input type="file" class="file_upload"/>
+              <span class="upload-icon"></span>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <label>Preview</label>
+            <div>
+              <img src="../../images/superman.png" width="250">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn primary-btn-outline" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn  primary-btn ">Set</button>
+      </div>
+    </div>
+  </div>
+</div>
 
       <!-- Main Footer -->
       <footer class="main-footer">
