--- a/pages/portfolioimage/portfolioimages1.html
+++ b/pages/portfolioimage/portfolioimages1.html
@@ -41,7 +41,7 @@
   </head>
 
   <body class="hold-transition sidebar-mini" style="background: #e4e4e4;">
-    <div class="wrapper" style="background-color: white;">
+    <div class="wrapper" >
       <!-- Navbar Main -->
       <nav
         class="main-header navbar navbar-expand navbar-white navbar-light"
@@ -232,12 +232,6 @@
                     <div class="carousel-item active">
                       <img src="../../images/posts/post5.png" class="d-block" />
                     </div>
-                    <!-- <div class="carousel-item">
-                      <img
-                        src="../../images/superman.png"
-                        class="d-block "
-                      />
-                    </div> -->
                   </div>
                   <a
                     class="carousel-control-prev carousel-control-btn ml-3"
