--- a/pages/dashboardListUser/dashboardListUser.html
+++ b/pages/dashboardListUser/dashboardListUser.html
@@ -451,86 +451,140 @@
 
                     <div class="no-gutters">
                       <ul class="user-list">
+                        <li class="user-tab row p-1">
+                          <div class="col-2">
+                            <img
+                              src="../../images/proPhoto.png"
+                              alt=""
+                              width="100%"
+                              class="rounded-circle img-fluid"
+                            />
+                          </div>
+                          <div class="col-10">
+                            <div class="row">
+                              <div class="col-8 ">
+                                <span class="profile-name">David James</span>
+                                <p class="profile-desc">
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Iusto ipsam at cumque omnis
+                                  eos debitis velit magnam accusamus quam
+                                  ducimus nemo voluptates sapiente placeat
+                                  possimus, laborum, in ex blanditiis id!
+                                </p>
+                              </div>
+                              <div class="col-4 text-center">
+                                <button
+                                  class="btn btn-outline-primary btn-sm btn-xs m-1"
+                                >
+                                  Ignore
+                                </button>
+                                <button class="btn btn-primary btn-sm m-1 btn-xs">
+                                  Accept
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                        </li>
                         <li class="user-tab row">
-                          <ul class="flex-container row">
-                            <li class="profile-img" >
-                              <img
-                                src="../../images/proPhoto.png"
-                                alt=""
-                                width="100%"
-                                height=""
-                                class="rounded-circle"
-                              />
-                            </li>
-                            <li class="profile-details">
-                              <span class="profile-name">David James</span>
-                              <p class="profile-desc">
-                                Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Iusto ipsam at cumque omnis eos debitis
-                                velit magnam accusamus quam ducimus nemo
-                                voluptates sapiente placeat possimus, laborum, in
-                                ex blanditiis id!
-                              </p>
-                            </li>
-                            <li class="action-item"><button class="btn btn-outline-primary btn-sm m-1">
-                              Ignore
-                            </button>
-                            <button class="btn btn-primary btn-sm m-1">
-                              Accept
-                            </button></li>
-                          </ul>
+                          <div class="col-2">
+                            <img
+                              src="../../images/proPhoto.png"
+                              alt=""
+                              width="100%"
+                              class="rounded-circle"
+                            />
+                          </div>
+                          <div class="col-10">
+                            <div class="row">
+                              <div class="col-8 ">
+                                <span class="profile-name">David James</span>
+                                <p class="profile-desc">
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Iusto ipsam at cumque omnis
+                                  eos debitis velit magnam accusamus quam
+                                  ducimus nemo voluptates sapiente placeat
+                                  possimus, laborum, in ex blanditiis id!
+                                </p>
+                              </div>
+                              <div class="col-4 text-center">
+                                <button
+                                  class="btn btn-outline-primary btn-sm btn-xs m-1"
+                                >
+                                  Ignore
+                                </button>
+                                <button class="btn btn-primary btn-sm m-1 btn-xs">
+                                  Accept
+                                </button>
+                              </div>
+                            </div>
+                          </div>
                         </li>
                         <li class="user-tab row selected">
-                          <ul class="flex-container row">
-                            <li class="profile-img" >
-                              <img
-                                src="../../images/proPhoto.png"
-                                alt=""
-                                width="100%"
-                                height=""
-                                class="rounded-circle"
-                              />
-                            </li>
-                            <li class="profile-details">
-                              <span class="profile-name">David James</span>
-                              <p class="profile-desc">
-                                Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Iusto ipsam at cumque omnis eos debitis
-                                velit magnam accusamus quam ducimus nemo
-                                voluptates sapiente placeat possimus, laborum, in
-                                ex blanditiis id!
-                              </p>
-                            </li>
-                            <li class="action-item">Jan 5</li>
-                          </ul>
+                          <div class="col-2">
+                            <img
+                              src="../../images/proPhoto.png"
+                              alt=""
+                              width="100%"
+                              class="rounded-circle"
+                            />
+                          </div>
+                          <div class="col-10">
+                            <div class="row">
+                              <div class="col-8 ">
+                                <span class="profile-name">David James</span>
+                                <p class="profile-desc">
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Iusto ipsam at cumque omnis
+                                  eos debitis velit magnam accusamus quam
+                                  ducimus nemo voluptates sapiente placeat
+                                  possimus, laborum, in ex blanditiis id!
+                                </p>
+                              </div>
+                              <div class="col-4 text-center">
+                                <button
+                                class="btn btn-outline-primary btn-sm btn-xs m-1"
+                              >
+                                Ignore
+                              </button>
+                              <button class="btn btn-primary btn-sm m-1 btn-xs">
+                                Accept
+                              </button>
+                              </div>
+                            </div>
+                          </div>
                         </li>
                         <li class="user-tab row">
-                          <ul class="flex-container row">
-                            <li class="profile-img" >
-                              <img
-                                src="../../images/proPhoto.png"
-                                alt=""
-                                width="100%"
-                                height=""
-                                class="rounded-circle"
-                              />
-                            </li>
-                            <li class="profile-details">
-                              <span class="profile-name">David James</span>
-                              <p class="profile-desc">
-                                Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Iusto ipsam at cumque omnis eos debitis
-                                velit magnam accusamus quam ducimus nemo
-                                voluptates sapiente placeat possimus, laborum, in
-                                ex blanditiis id!
-                              </p>
-                            </li>
-                            <li class="action-item">Jan 5</li>
-                          </ul>
+                          <div class="col-2">
+                            <img
+                              src="../../images/proPhoto.png"
+                              alt=""
+                              width="100%"
+                              class="rounded-circle"
+                            />
+                          </div>
+                          <div class="col-10">
+                            <div class="row">
+                              <div class="col-8 ">
+                                <span class="profile-name">David James</span>
+                                <p class="profile-desc">
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Iusto ipsam at cumque omnis
+                                  eos debitis velit magnam accusamus quam
+                                  ducimus nemo voluptates sapiente placeat
+                                  possimus, laborum, in ex blanditiis id!
+                                </p>
+                              </div>
+                              <div class="col-4 text-center">
+                                5 jan
+                              </div>
+                            </div>
+                          </div>
                         </li>
-                    
                       </ul>
                     </div>
+                  </div>
+                  <div class="col-8 ">
+                    test
                   </div>
 
                   <div class="clear"></div>
